# VisuBeam

./: .gitignore  DocGen.md  README.md  __init__.py  config.yaml  doa.service  main.py  pyproject.toml  requirements-pytorch.txt  requirements.txt
src/core/: __init__.py
src/core/audio/: __init__.py  buffer.py  file_input.py  source_selector.py  stft_engine.py  stream.py
src/core/config/: __init__.py  aec_config.py  config_loader.py  mcra_config.py  mic_array.py  settings.py  wpe_config.py
src/core/monitoring/: __init__.py  fault_detection.py  initialization.py  status.py
src/core/processor/: aec_processor.py  linear_aec_processor.py  mcra.py  mcra_reducer.py  wpe_processor.py
src/core/services/: __init__.py  file_processing_service.py  live_processing_service.py  processing_coordinator.py
src/core/utils/: audio_recorder.py  device_id.py  log_manager.py  output_saver.py  timestamp_formatter.py
src/doa/config/: doa_config.py
src/doa/core/: doa_engine.py  doa_processor.py  noise_reducer.py  tdoa_utils.py
src/doa/services/: doa_service.py
src/doa/visualization/: doa_visualizer.py  global_visualizer.py  realtime_visualizer.py
src/enhancement/config/: dtln_config.py  enhancement_config.py  mvdr_config.py  webrtc_apm_config.py
src/enhancement/core/: doa_engine.py  dtln_processor.py  enhancement_processor.py  model_loader.py  mvdr_processor.py  webrtc_apm.py
src/enhancement/services/: enhancement_service.py
src/network/: __init__.py  manager.py  models.py  service.py
src/network/static/: app.js  demo.html  styles.css
