[tool.poetry]
name = "doa-audio-processing-core"
version = "0.1.0"
description = "音频处理系统核心基础模块"
authors = ["Developer <developer@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyaudio = "^0.2.11"
numpy = "^1.21.0"
scipy = "^1.7.0"
soundfile = "^0.10.3"
nara-wpe = "^0.0.7"
librosa = "^0.9.0"
scikit-learn = "^1.0.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
doa-core = "main:main"